[gd_scene load_steps=3 format=3 uid="uid://fy3ffmdb6hgg"]

[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="1_6apqg"]
[ext_resource type="Script" path="res://src/ui/expand_farm.gd" id="1_ynxcb"]

[node name="ExpandFarm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ynxcb")

[node name="Center" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_6apqg")

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Center/Panel"]
layout_mode = 2
columns = 3

[node name="Spacer1" type="Control" parent="Center/Panel/GridContainer"]
layout_mode = 2

[node name="Up" type="Button" parent="Center/Panel/GridContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Expand Up"

[node name="Spacer2" type="Control" parent="Center/Panel/GridContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="Center/Panel/GridContainer"]
layout_mode = 2
text = "Expand Left"

[node name="Spacer3" type="Control" parent="Center/Panel/GridContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="Right" type="Button" parent="Center/Panel/GridContainer"]
layout_mode = 2
text = "Expand Right"

[node name="Spacer4" type="Control" parent="Center/Panel/GridContainer"]
layout_mode = 2

[node name="Down" type="Button" parent="Center/Panel/GridContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Expand Down"

[connection signal="pressed" from="Center/Panel/GridContainer/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Center/Panel/GridContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Center/Panel/GridContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Center/Panel/GridContainer/Down" to="." method="_on_down_pressed"]
